--- a/ChimpSniffing.ipynb
+++ b/ChimpSniffing.ipynb
@@ -55,6 +55,529 @@
   },
   {
    "cell_type": "markdown",
+   "id": "17bf35fe",
+   "metadata": {},
+   "source": [
+    "   Also this is the summary table:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "740e736b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Individual</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>TotalSniffs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Abrams</td>\n",
+       "      <td>16.253333</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ava</td>\n",
+       "      <td>10.390000</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bach</td>\n",
+       "      <td>12.595000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Barron</td>\n",
+       "      <td>15.315000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bartok</td>\n",
+       "      <td>42.370000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Basie</td>\n",
+       "      <td>34.930000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Beecher</td>\n",
+       "      <td>13.970000</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Benny</td>\n",
+       "      <td>14.832500</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>BillyBragg</td>\n",
+       "      <td>13.845000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Booker</td>\n",
+       "      <td>15.725000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Bosko</td>\n",
+       "      <td>16.895000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Brownface</td>\n",
+       "      <td>53.117500</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Buckner</td>\n",
+       "      <td>15.163333</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Cannonball</td>\n",
+       "      <td>11.536250</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Carter</td>\n",
+       "      <td>28.323333</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Cash</td>\n",
+       "      <td>24.320000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Damien</td>\n",
+       "      <td>13.960000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Dexter</td>\n",
+       "      <td>30.040000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Django</td>\n",
+       "      <td>19.560000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Dylan</td>\n",
+       "      <td>12.966667</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Ellen</td>\n",
+       "      <td>11.840000</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Elton</td>\n",
+       "      <td>12.960000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Elvira</td>\n",
+       "      <td>6.310000</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Erroll</td>\n",
+       "      <td>13.680000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>EttaJames</td>\n",
+       "      <td>7.640000</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Evans</td>\n",
+       "      <td>20.410000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Fleck</td>\n",
+       "      <td>11.420000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Fricka</td>\n",
+       "      <td>6.160000</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Garett</td>\n",
+       "      <td>28.464000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Garrison</td>\n",
+       "      <td>39.021667</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Herbie</td>\n",
+       "      <td>20.955000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Hicks</td>\n",
+       "      <td>20.227500</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Holland</td>\n",
+       "      <td>9.473333</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Jackson</td>\n",
+       "      <td>24.340000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Joya</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Khutulun</td>\n",
+       "      <td>16.500000</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Larson</td>\n",
+       "      <td>13.745000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Lovano</td>\n",
+       "      <td>16.263333</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Margaret</td>\n",
+       "      <td>11.920000</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Marlene</td>\n",
+       "      <td>64.840000</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>Mitchell</td>\n",
+       "      <td>16.507500</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Morton</td>\n",
+       "      <td>32.837500</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Nadine</td>\n",
+       "      <td>7.690000</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Naidu</td>\n",
+       "      <td>3.730000</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Nelson</td>\n",
+       "      <td>11.140000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Ornette</td>\n",
+       "      <td>38.260000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Peterson</td>\n",
+       "      <td>21.395000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Porkpie</td>\n",
+       "      <td>23.020000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Puccini</td>\n",
+       "      <td>9.810000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>Rahsaan</td>\n",
+       "      <td>28.060000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>RichBergl</td>\n",
+       "      <td>7.130000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>Richmond</td>\n",
+       "      <td>30.295000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>Rollins</td>\n",
+       "      <td>31.367500</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>Septina</td>\n",
+       "      <td>5.300000</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>Wayne</td>\n",
+       "      <td>19.060000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>Wes</td>\n",
+       "      <td>19.197143</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>Wilson</td>\n",
+       "      <td>15.488571</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>YoYo</td>\n",
+       "      <td>13.790000</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Individual        Age      Sex  TotalSniffs\n",
+       "0       Abrams  16.253333     Male            6\n",
+       "1          Ava  10.390000   Female            1\n",
+       "2         Bach  12.595000     Male            2\n",
+       "3       Barron  15.315000     Male            2\n",
+       "4       Bartok  42.370000     Male            1\n",
+       "5        Basie  34.930000     Male            1\n",
+       "6      Beecher  13.970000   Female            1\n",
+       "7        Benny  14.832500     Male            8\n",
+       "8   BillyBragg  13.845000     Male            2\n",
+       "9       Booker  15.725000     Male            2\n",
+       "10       Bosko  16.895000     Male            2\n",
+       "11   Brownface  53.117500     Male            4\n",
+       "12     Buckner  15.163333     Male            3\n",
+       "13  Cannonball  11.536250     Male            8\n",
+       "14      Carter  28.323333     Male            6\n",
+       "15        Cash  24.320000     Male            2\n",
+       "16      Damien  13.960000     Male            3\n",
+       "17      Dexter  30.040000     Male            2\n",
+       "18      Django  19.560000     Male            6\n",
+       "19       Dylan  12.966667     Male            6\n",
+       "20       Ellen  11.840000   Female            1\n",
+       "21       Elton  12.960000     Male            1\n",
+       "22      Elvira   6.310000   Female            1\n",
+       "23      Erroll  13.680000     Male            5\n",
+       "24   EttaJames   7.640000   Female            2\n",
+       "25       Evans  20.410000     Male            5\n",
+       "26       Fleck  11.420000     Male            1\n",
+       "27      Fricka   6.160000   Female            2\n",
+       "28      Garett  28.464000     Male            5\n",
+       "29    Garrison  39.021667     Male            6\n",
+       "30      Herbie  20.955000     Male            2\n",
+       "31       Hicks  20.227500     Male            4\n",
+       "32     Holland   9.473333     Male            3\n",
+       "33     Jackson  24.340000     Male            1\n",
+       "34        Joya  10.000000   Female            1\n",
+       "35    Khutulun  16.500000   Female            1\n",
+       "36      Larson  13.745000     Male            2\n",
+       "37      Lovano  16.263333     Male            3\n",
+       "38    Margaret  11.920000   Female            1\n",
+       "39     Marlene  64.840000   Female            1\n",
+       "40    Mitchell  16.507500     Male           12\n",
+       "41      Morton  32.837500     Male            4\n",
+       "42      Nadine   7.690000  Unknown            1\n",
+       "43       Naidu   3.730000   Female            1\n",
+       "44      Nelson  11.140000     Male            1\n",
+       "45     Ornette  38.260000     Male            3\n",
+       "46    Peterson  21.395000     Male            2\n",
+       "47     Porkpie  23.020000     Male           13\n",
+       "48     Puccini   9.810000     Male            1\n",
+       "49     Rahsaan  28.060000     Male            1\n",
+       "50   RichBergl   7.130000     Male            1\n",
+       "51    Richmond  30.295000     Male            4\n",
+       "52     Rollins  31.367500     Male            4\n",
+       "53     Septina   5.300000   Female            1\n",
+       "54       Wayne  19.060000     Male            1\n",
+       "55         Wes  19.197143     Male           21\n",
+       "56      Wilson  15.488571     Male            7\n",
+       "57        YoYo  13.790000     Male            5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sniff_sum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "63c127f5",
    "metadata": {},
    "source": [
@@ -63,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "6953b35d",
    "metadata": {
     "scrolled": false
@@ -137,12 +660,12 @@
    "id": "b664c12f",
    "metadata": {},
    "source": [
-    "But I don't think using average and total sniffs makes sense. I am going to try just using age and sniff occurances across all individuals"
+    "But idk if using average and total sniffs makes sense. I am going to try just using age and sniff occurances across all individuals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "e5e30881",
    "metadata": {
     "scrolled": false
@@ -173,14 +696,6 @@
     "\n",
     "# But this is probably biased because they mostly follow younger chimps"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14287096",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
